--- a/website.html
+++ b/website.html
@@ -1,3 +1,7 @@
 <html en="lang">
-    
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>PFox</title>
+</head> 
 </html>
