--- a/website.html
+++ b/website.html
@@ -5,7 +5,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>PFox</title>
 	<body>
-	
+	<script>
+		var x = document.getElementById("demo");
+		function getLocation() {
+		  if (navigator.geolocation) {
+			navigator.geolocation.getCurrentPosition(showPosition);
+		  } else {
+			x.innerHTML = "Geolocation is not supported by this browser.";
+		  }
+		}
+		
+		function showPosition(position) {
+		  x.innerHTML = "Latitude: " + position.coords.latitude +
+		  "<br>Longitude: " + position.coords.longitude;
+		}
+	</script>
 	</body>
 </head> 
 </html>
