--- a/website.html
+++ b/website.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>PFox</title>
+	<title>Princeton Fox</title>
 	<body>
 		
 		<h1> Princeton Fox Sightings </h1>
