inserted logo woooo

--- a/website.html
+++ b/website.html
@@ -8,6 +8,7 @@
 	<title>Princeton Fox</title>
 	<body>
 		
+		<img src="images/pfoxLogo.png" alt="pfox logo" title="pfoxLogo">
 		<h1> Princeton Fox Sightings </h1>
 	
 	</body>
