idk what im doing

--- a/website.html
+++ b/website.html
@@ -8,7 +8,7 @@
 	<title>Princeton Fox</title>
 	<body>
 		
-		<img src="images/pfoxLogo.png" alt="pfox logo" title="pfoxLogo">
+		<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
 		<h1> Princeton Fox Sightings </h1>
 	
 	</body>
