commented out fox

--- a/website.html
+++ b/website.html
@@ -4,14 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	// website title
+	<!--website title-->
 	<title>Princeton Fox</title>
 	<body>
-		//logo
-		<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
+		<!--logo
+		<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo"> -->
 		<h1> Princeton Fox Sightings </h1>
 		
-		// user uploads image of fox
+		<!-- user uploads image of fox -->
 	</body>
 </head> 
 </html>
