--- a/website.html
+++ b/website.html
@@ -12,6 +12,11 @@
 		<h1> Princeton Fox Sightings </h1>
 		
 		<!-- user uploads image of fox -->
+		<form action="upload.php" method="post" enctype="multipart/form-data">
+ 			Select image to upload:
+  			<input type="file" name="fileToUpload" id="fileToUpload">
+  			<input type="submit" value="Upload Image" name="submit">
+		</form>
 	</body>
 </head> 
 </html>
