--- a/website.html
+++ b/website.html
@@ -12,7 +12,7 @@
 		<h1> Princeton Fox Sightings </h1>
 		
 		<!-- user uploads image of fox -->
-		<!-- <input type="file"  accept="image/*" name="image" id="file" style="display: none;">
+		<!-- <input type="file"  accept="image/heic, image/jpeg, image/png" name="image" id="file" style="display: none;">
 		  <form action="upload.php" method="post" enctype="multipart/form-data">
  			Select image to upload:
   			<input type="file" name="fileToUpload" id="fileToUpload">
