--- a/website.html
+++ b/website.html
@@ -12,12 +12,17 @@
 		<h1> Princeton Fox Sightings </h1>
 		
 		<!-- user uploads image of fox -->
-		<!-- <input type="file"  accept="image/heic, image/jpeg, image/png" name="image" id="file" style="display: none;">
-		  <form action="upload.php" method="post" enctype="multipart/form-data">
- 			Select image to upload:
-  			<input type="file" name="fileToUpload" id="fileToUpload">
-  			<input type="submit" value="Upload Image" name="submit">
-		</form> -->
+		<p><input type="file"  accept="image/heic, image/jpeg, image/png" name="image" id="file" onchange="loadFile(event)" style="display: none;"></p>
+		<p><label for="file" style="cursor: pointer;">Upload Image</label></p>
+		<p><img id="output" width="200%" /></p>
+		
+		<!-- computer displays image of fox -->
+		<script>
+		var loadFile = function(event) {
+		var image = document.getElementById('output');
+		image.src = URL.createObjectURL(event.target.files[0]);
+		};
+		</script>
 	</body>
 </head> 
 </html>
