--- a/website.html
+++ b/website.html
@@ -7,10 +7,11 @@
 	<!--website title-->
 	<title>Princeton Fox</title>
 	<body>
-		<!--logo
-		<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo"> -->
-		<h1> Princeton Fox Sightings </h1>
-		
+		<!--logo -->
+		<div class="nav">
+			<img src="images/pfoxLogo.png" width="50" alt="pfox logo" title="pfoxLogo" id="logo">
+			<h1> Princeton Fox Sightings </h1>
+		</div>
 		<!-- user uploads image of fox -->
 	</body>
 </head> 
