--- a/website.html
+++ b/website.html
@@ -25,6 +25,10 @@
 		image.src = URL.createObjectURL(event.target.files[0]);
 		};
 		</script>
+		
+		<!--show location of user -->
+		
+		<!--show time of user -->
 	</body>
 </head> 
 </html>
