--- a/website.html
+++ b/website.html
@@ -26,9 +26,13 @@
 		};
 		</script>
 		
+		<!--get location of user -->
+		
 		<!--show location of user -->
 		
 		<!--show time of user -->
+		
+		<!--show date of user -->
 	</body>
 </head> 
 </html>
