--- a/website.html
+++ b/website.html
@@ -14,7 +14,7 @@
 		</div>
 		
 		<!-- user uploads image of fox -->
-		<p><input type="file"  accept="image/heic, image/jpeg, image/png" name="image" id="file" onchange="loadFile(event)" style="display: none;"></p>
+		<p><input type="file"  accept="image/heic, image/jpeg, image/png" name="image" id="file" onchange="loadFile(event)"></p>
 		<p><label for="file" style="cursor: pointer;">Upload Image</label></p>
 		<p><img id="output" width="200%" /></p>
 		
