--- a/website.html
+++ b/website.html
@@ -18,7 +18,7 @@
 		
 		<!-- user uploads image of fox -->
 		<p><label for="file" style="cursor: pointer;">Upload Image</label></p>
-		<p><input type="file"  accept="image/*, video/*" name="image" id="file" onchange="loadFile(event)"></p>
+		<p><input type="file"  accept="image/*, video/*" name="image" id="file" style="display: none;" onchange="loadFile(event)"></p>
 		<p><img id="output" width="200%" /></p>
 		
 		<!-- computer displays image of fox -->
