--- a/website.html
+++ b/website.html
@@ -36,6 +36,8 @@
 		<!--show time of user -->
 		
 		<!--show date of user -->
+		
+		<!--add image or video with location, time, and date tags to website permanently -->
 	</body>
 </head> 
 </html>
