--- a/website.html
+++ b/website.html
@@ -13,6 +13,8 @@
 			<h1> Princeton Fox Sightings </h1>
 		</div>
 		
+		<!-- array to store data from users -->
+		
 		<!-- tell user to upload image -->
 		<p>Click on the upload image button to upload a picture or video:</p>
 		
