--- a/website.html
+++ b/website.html
@@ -16,11 +16,11 @@
 		<!-- array to store data from users -->
 		
 		<!-- tell user to upload image -->
-		<p>Click on the upload image button to upload a picture or video:</p>
+		<p>Click on the upload image button to upload a picture:</p>
 		
 		<!-- user uploads image of fox -->
 		<p><label for="file" style="cursor: pointer;">Upload Image</label></p>
-		<p><input type="file"  accept="image/*, video/*" name="image" id="file" style="display: none;" onchange="loadFile(event)"></p>
+		<p><input type="file"  accept="image/*" name="image" id="file" style="display: none;" onchange="loadFile(event)"></p>
 		<p><img id="output" width="100%" /></p>
 		
 		<!-- computer displays image of fox -->
