--- a/website.html
+++ b/website.html
@@ -36,13 +36,13 @@
 		
 		<!--get location of user -->
 		
-		<!--show location of user -->
+		<!--add location of user to the array-->
 		
-		<!--show time of user -->
+		<!--get time and date of user -->
 		
-		<!--show date of user -->
+		<!--add time and date of user to the arrat -->
 		
-		<!--add image or video with location, time, and date tags to website permanently -->
+		<!--display the array -->
 	</body>
 </head> 
 </html>
