--- a/website.html
+++ b/website.html
@@ -41,7 +41,7 @@
 		
 		<!--get time and date of user -->
 		
-		<!--add time and date of user to the arrat -->
+		<!--add time and date of user to the arrat!! -->
 		
 		<!--display the array -->
 	</body>
