--- a/website.html
+++ b/website.html
@@ -37,7 +37,7 @@
 		
 		<!--get location of user -->
 		
-		<!--add location of user to the array-->
+		<!--add location of user to the array if user is within princeton campus-->
 		
 		<!--get time and date of user -->
 		
