change class name from "nav" to "head"

--- a/website.html
+++ b/website.html
@@ -9,7 +9,7 @@
 </head> 
 	<body>
 		<!--logo -->
-		<div class="nav">
+		<div class="head">
 			<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
 			<h1> Princeton Fox Sightings</h1>
 		</div>
@@ -27,6 +27,7 @@
 		<!--add time and date of user to the arrat!! -->
 		
 		<!-- tell user to upload image -->
+		<div class = ></div>
 		<p>Click on the upload image button to upload a picture:</p>
 		
 		<!-- user uploads image of fox -->
