--- a/website.html
+++ b/website.html
@@ -19,6 +19,15 @@
 		<!-- empty array to store data from users -->
 		
 		<!--get location of user -->
+		<script>
+			const successCallback = (position) => {
+				console.log(position);
+			};
+			const errorCallback = (error) => {
+				console.error(error);
+			};
+			navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
+		</script>
 		
 		<!--add location of user to the array if user is within princeton campus-->
 		
