--- a/website.html
+++ b/website.html
@@ -27,8 +27,13 @@
 		<!--add time and date of user to the arrat!! -->
 		
 		<!-- tell user to upload image -->
-		<div class = ></div>
-		<p>Click on the upload image button to upload a picture:</p>
+		<div class = "upload">
+			<h2>The world needs fox pictures.</h2>
+			<p> <span>Share your pictures with the world!</span> Lorem ipsum dolor sit amet, consectetur 
+				adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
+				aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+				nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+		</div>
 		
 		<!-- user uploads image of fox -->
 		<p><label for="file" style="cursor: pointer;">Upload Image</label></p>
