--- a/website.html
+++ b/website.html
@@ -45,9 +45,11 @@
 		</div>
 		
 		<!-- user uploads image of fox -->
-		<p><label for="file" style="cursor: pointer;">Upload Image</label></p>
-		<p><input type="file"  accept="image/*" name="image" id="file" style="display: none;" onchange="loadFile(event)"></p>
-		<p><img id="output" width="100%" /></p>
+		<div class="uploadBtn">
+			<label for="file" style="cursor: pointer;">Upload Image</label>
+			<input type="file"  accept="image/*" name="image" id="file" style="display: none;" onchange="loadFile(event)">
+			<img id="output" width="100%">
+		</div>
 		
 		<!-- add image to array -->
 		
