--- a/website.html
+++ b/website.html
@@ -31,6 +31,8 @@
 		
 		<!--add location of user to the array if user is within princeton campus-->
 		
+		<!--else the user is outside the campus, can't upload image-->
+		
 		<!--get time and date of user -->
 			<!--define where the date/time should be shown in the HTML page -->
 			<p>Date/Time: <span id="datetime"></span></p>
