image added to button label

--- a/website.html
+++ b/website.html
@@ -56,7 +56,7 @@
 		
 		<!-- user uploads image of fox -->
 		<div class="uploadBtn">
-			<label for="file" style="cursor: pointer;"> Upload Image</label>
+			<label for="file" style="cursor: pointer;"> <img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo"> Upload Image</label>
 			<input type="file"  accept="image/*" name="image" id="file" style="display: none;" onchange="loadFile(event)">
 			<img id="output" width="100%">
 		</div>
