--- a/website.html
+++ b/website.html
@@ -29,7 +29,7 @@
 			navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
 		</script>
 		
-		<!--add location of user to the array if user is within princeton campus-->
+		<!--if user is within princeton campus, add location of user to the array and allow user to upload image-->
 		
 		<!--else the user is outside the campus, can't upload image-->
 		
