--- a/website.html
+++ b/website.html
@@ -29,6 +29,10 @@
 			navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
 		</script>
 		
+		<!--if user allows location, continue -->
+		
+		<!--else, they just look at the pics of foxes ^-^ -->
+		
 		<!--if user is within princeton campus, add location of user to the array and allow user to upload image-->
 		
 		<!--else the user is outside the campus, can't upload image-->
