--- a/website.html
+++ b/website.html
@@ -54,9 +54,9 @@
 				nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
 		</div>
 		
-		<!-- user uploads image of fox -->
+		<!-- user upload button -->
 		<div class="uploadBtn">
-			<label for="file" style="cursor: pointer;"> <img src="images/arrow-up-circle.svg" width = "50" title="upCircle" id="up"> Upload Image</label>
+			<label for="file" style="cursor: pointer;"> <img src="images/arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload Image</label>
 			<input type="file"  accept="image/*" name="image" id="file" style="display: none;" onchange="loadFile(event)">
 			<img id="output" width="100%">
 		</div>
