--- a/website.html
+++ b/website.html
@@ -38,14 +38,14 @@
 		
 		
 		<!--get time and date of user -->
-			<!--define where the date/time should be shown in the HTML page -->
-			<p>Date/Time: <span id="datetime"></span></p>
+			<!--define where the date/time should be shown in the HTML page 
+			<p>Date/Time: <span id="datetime"></span></p> -->
 			
-			<!-- assign the date/time to the content of the element -->
+			<!-- assign the date/time to the content of the element
 			<script>
 			var dt = new Date();
 			document.getElementById("datetime").innerHTML = dt.toLocaleString();
-			</script>
+			</script> -->
 		
 		<!--add time and date of user to the arrat!! -->
 		
