--- a/website.html
+++ b/website.html
@@ -62,9 +62,23 @@
 		<div class="uploadBtn">
 			<label for="file" style="cursor: pointer;"> <img src="images/arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload Image</label>
 		</div>
+
+		<!-- display image
+		<div class="foxPhoto">
 			<input type="file"  accept="image/*" name="image" id="file" style="display: none;" onchange="loadFile(event)">
-			<img id="output" width="100%">
+			<img id="output">
+		</div>
 		
+		<div class="col2">
+			<img src="images/pfoxLogo.png" width = "100" alt="pfox logo" title="pfoxLogo" id="help">
+		</div>
+		-->
+		
+		<ul>
+			<li><img src="images/pfoxLogo.png" width = "100" alt="pfox logo" title="pfoxLogo" id="help"></li>
+			<li><img src="images/pfoxLogo.png" width = "100" alt="pfox logo" title="pfoxLogo" id="help"></li>
+		</ul>
+
 		<!-- add image to array -->
 		
 		
