--- a/website.html
+++ b/website.html
@@ -70,8 +70,9 @@
 		-->
 				
 		<ul>
-			<li><img src="images/pfoxLogo.png" width = "100" alt="pfox logo" title="pfoxLogo" id="help"></li>
-			<li><img src="images/pfoxLogo.png" width = "100" alt="pfox logo" title="pfoxLogo" id="help"></li>
+			<li id="first"><img src="images/test.jpg" width = "100" alt="pfox logo" title="pfoxLogo" id="pic1"></li>
+			<li id="second"><img src="images/test.jpg" width = "100" alt="pfox logo" title="pfoxLogo" id="pic2"></li>
+			<li id="third"></li>
 		</ul>
 
 				<!-- add image to array -->
