--- a/website.html
+++ b/website.html
@@ -47,7 +47,7 @@
 				<!-- tell user to upload image -->
 				<div class = "upload">
 				<h2>The world needs fox pictures.</h2>
-				<p> <span>Share your pictures with the world!</span> Information collected can help inform natural resource management decisions. 
+				<p> <span>Share your pictures with the world!</span> Information collected can help inform natural resource management decisions, and animal control. 
 				adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
 				aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
 				nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
