--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- does not take user location -->
 <!DOCTYPE html>
 <html en="lang">
 <head>
@@ -30,6 +31,5 @@
 				<label for="file" style="cursor: pointer;"> <img src="images/arrow-right-circle.png" width = "25" title="rightCircle" id="right"> upload here </label>
 		</div>
 
-		
 </body>
 </html>
