--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<!-- user upload button -->
 		<div class="uploadBtn">
-				<label for="file" style="cursor: pointer;"> <img src="images/arrow-right-circle.png" width = "25" title="rightCircle" id="right"> upload here </label>
+                <a href="website.html">  <img src="images/arrow-right-circle.png" width = "25" title="rightCircle" id="right"> upload here</a>
 		</div>
 
 		
