--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
                 <a href="upload.html">  <img src="images/arrow-right-circle.png" width = "25" title="rightCircle" id="right"> upload here</a>
 		</div>
 
+        <!-- footer -->
+        <footer class="footerContainer">
+            <p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen<br> copyright <span>&copy; 2022 the milflovers.</span> All Rights Reserved.
+            </p>
+        </footer>
+
 </body>
 </html>
