--- a/upload.html
+++ b/upload.html
@@ -55,7 +55,7 @@
 		
 				<!-- user upload button -->
 				<div class="uploadBtn">
-					<label for="file" style="cursor: pointer;"> <img src="images/arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload Image</label>
+					<label for="file" style="cursor: pointer;" id="uploadButton"> <img src="images/arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload Image</label>
 				</div>
 
 		<!-- display image-->
