--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		<!--logo -->
 		<div class="head">
 			<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
-			<h1> Princeton Fox Sightings</h1>
+            <a href="index.html"> 
+			    <h1> Princeton Fox Sightings</h1>
+            </a>
 		</div>
 		
 		<hr>
@@ -32,7 +34,7 @@
 		</div>
 
         <!-- footer -->
-        <footer class="footerContainer">
+        <footer class="footer1">
             <p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen<br> copyright <span>&copy; 2022 the milflovers.</span> All Rights Reserved.
             </p>
         </footer>
