--- a/upload.html
+++ b/upload.html
@@ -11,7 +11,9 @@
 		<!--logo -->
 		<div class="head">
 			<img src="images/pfoxLogo.png" width = "50" alt="pfox logo" title="pfoxLogo" id="logo">
-			<h1> Princeton Fox Sightings</h1>
+			<a href="index.html"> 
+				<h1> Princeton Fox Sightings</h1>
+			</a>
 		</div>
 		
 		<hr>
@@ -55,7 +57,7 @@
 		
 				<!-- user upload button -->
 				<div class="uploadBtn">
-					<label for="file" style="cursor: pointer;" id="uploadButton"> <img src="images/arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload Image</label>
+					<label for="file" style="cursor: pointer;" id="uploadButton"> <img src="images/arrow-up-circle.png" width = "25" title="upCircle" id="up"> Upload here</label>
 				</div>
 
 		<!-- display image-->
@@ -82,6 +84,12 @@
 			<!--else the user is outside the campus, can't upload image-->
 		
 		<!--else, they just look at the pics of foxes ^-^ -->
+
+		<!-- footer -->
+			<footer class="footer2">
+				<p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen<br> copyright <span>&copy; 2022 the milflovers.</span> All Rights Reserved.
+				 </p>
+			</footer>
 		
 </body>
 </html>
