--- a/upload.html
+++ b/upload.html
@@ -66,7 +66,7 @@
 				<input type="file"  accept="image/*" name="image" id="file" style="display: none;" onchange="loadFile(event)">
 				<img id="output">
 			</li>
-			<li id="second"><img src="images/test.jpg" width = "100" alt="pfox logo" title="pfoxLogo" id="pic2"></li>
+			<li id="second"><img src="images/foxButterfly.jpeg" width = "100" alt="pfox logo" title="pfoxLogo" id="pic2"></li>
 		</ul>
 
 				<!-- add image to array -->
