--- a/upload.html
+++ b/upload.html
@@ -49,10 +49,8 @@
 				<!-- tell user to upload image -->
 				<div class = "upload">
 				<h2>The world needs fox pictures.</h2>
-				<p> <span>Share your pictures with the world!</span> Information collected can help inform natural resource management decisions and animal control. 
-				adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
-				aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-				nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+				<p> <span>Share your pictures with the world!</span> please help us by allowing access to your location. The information we collect contributes to more informed natural resource management decisions and aids local animal control in keeping princeton safe. 
+				</p>
 				</div>
 		
 				<!-- user upload button -->
@@ -66,7 +64,10 @@
 				<input type="file"  accept="image/*" name="image" id="file" style="display: none;" onchange="loadFile(event)">
 				<img id="output">
 			</li>
-			<li id="second"><img src="images/foxButterfly.jpeg" width = "100" alt="pfox logo" title="pfoxLogo" id="pic2"></li>
+			<li id="second"><img src="images/foxButterfly.jpeg" width = "100" id="pic2">
+				<br><br>
+				<img src="images/closeFox.jpeg" width = "100" id="pic3">
+			</li>
 		</ul>
 
 				<!-- add image to array -->
