--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
         <!-- tell user to upload image -->
 		<div class = "upload">
 			<h2>The world needs fox pictures.</h2>
-			<p> <span>Share your pictures with the world!</span> Information collected can help inform natural resource management decisions and animal control. 
-				adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
-				aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-				nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+			<p> <span>Share your pictures with the world!</span> Information collected can contribute to more informed natural resource management decisions and aids local animal control in keeping princeton and its residents safe. Click the button below to start uploading your photos and location.</p>
 	    </div>
 		
 		<!-- user upload button -->
