--- a/upload.html
+++ b/upload.html
@@ -49,7 +49,7 @@
 				<!-- tell user to upload image -->
 				<div class = "upload">
 				<h2>The world needs fox pictures.</h2>
-				<p> <span>Share your pictures with the world!</span> please help us by allowing access to your location. The information we collect contributes to more informed natural resource management decisions and aids local animal control in keeping princeton safe. 
+				<p> <span>Share your pictures with the world!</span> please help us by allowing access to your location. The information we collect can contribute to more informed natural resource management decisions and aids local animal control in keeping princeton and its residents safe. 
 				</p>
 				</div>
 		
