--- a/upload.html
+++ b/upload.html
@@ -76,7 +76,7 @@
 					fetch('https://upload.estuary.tech/content/add', {
 						method: "POST",
 						headers: {
-							Authorization: 'Bearer REPLACE_ME_WITH_API_KEY',
+							Authorization: 'Bearer EST630a2c84-4998-4f69-b6a6-ca1f5d166f8aARY',
 						},
 						body: document.getElementById('output')
 					})
