--- a/upload.html
+++ b/upload.html
@@ -90,7 +90,7 @@
 				};
 				</script>
 		
-				<!--add to database-->>
+				<!--add to database-->
 				<script>
 					var MongoClient = require('mongodb').MongoClient;
 					var url = "mongodb+srv://dandan010:dkssud010@cluster0.7c00ea1.mongodb.net/?retryWrites=true&w=majority";
