--- a/upload.html
+++ b/upload.html
@@ -78,7 +78,7 @@
 						headers: {
 							Authorization: 'Bearer EST630a2c84-4998-4f69-b6a6-ca1f5d166f8aARY',
 						},
-						body: URL.createObjectURL(event.target.files[0])
+						body: document.getElementById('output')
 					})
 				</script>
 
