--- a/upload.html
+++ b/upload.html
@@ -77,7 +77,9 @@
 							Authorization: 'Bearer EST630a2c84-4998-4f69-b6a6-ca1f5d166f8aARY',
 						},
 						body: event.target.files[0]
-					})
+					}).then((response) => {
+						console.log(response);
+					});
 				</script>
 
 				<!-- computer displays image of fox -->
