--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- footer -->
         <footer class="footer1">
-            <p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen<br> copyright <span>&copy; 2022 the milflovers.</span> All Rights Reserved.
+            <p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen<br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
             </p>
         </footer>
 
