--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!--website title-->
-	<title>Princeton Fox</title>
+	<title>Princeton Fox Sightings</title>
 </head> 
 <body>
 		<!--logo -->
