--- a/upload.html
+++ b/upload.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!--website title-->
-	<title>Princeton Fox</title>
+	<title>Upload Fox Photos</title>
 </head> 
 <body>
 		<!--logo -->
