--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <a href="upload.html">  <img src="images/arrow-right-circle.png" width = "25" title="rightCircle" id="right"> upload here</a>
 		</div>
 
+		<div class="map">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3040.966275993817!2d-74.65955857036741!3d40.343094113400596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3e6d8cd98b6e9%3A0x2ba7ed6fa90024f!2sPrinceton%20University!5e0!3m2!1sen!2sus!4v1668295323634!5m2!1sen!2sus" width = 70% height = "450px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		</div>
+
         <!-- footer -->
         <footer class="footer1">
             <p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen<br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
