--- a/upload.html
+++ b/upload.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="daniel.js"></script> 
 	<!--website title-->
 	<title>Upload Fox Photos</title>
 </head> 
