--- a/index.html
+++ b/index.html
@@ -40,20 +40,11 @@
 			</div>
 		</div>
 
-		<hr id="footerLine">
-
         <!-- footer -->
         <footer class="footer1">
-			<ul id="footerCol">
-				<li id="copyright">
-					<p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen<br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
-					</p>
-				</li>
-				
-				<li id="scroll">
-					<a href="#head">back to top</a> 
-				</li>
-			</ul>
+			<a href="#head" style="float: right;">back to top</a> 
+			<p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen<br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
+			</p>
         </footer>
 
 </body>
