--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
 		<!-- footer -->
 			<footer class="footer2">
+				<a href="#head">back to top</a>
 				<p>coded with love by faith best, daniel jung, sabrina van, and kaitlyn wen <br> copyright <span>&copy; 2022 the foxlovers.</span> All Rights Reserved.
 				 </p>
 			</footer>
